--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "dayjs": "1.11.7",
     "lodash-es": "4.17.21",
     "pinia": "2.1.3",
-    "vue": "3.2.47",
+    "vue": "3.3.4",
     "vue-chartjs": "5.2.0",
-    "vue-i18n": "^9.2.2"
+    "vue-i18n": "9.2.2",
+    "vue-meta": "3.0.0-alpha.10",
+    "vue-router": "4.1.6"
   },
   "devDependencies": {
     "@types/lodash-es": "4.17.7",
