--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@mdi/font": "7.2.96",
     "@vueuse/core": "10.0.2",
     "@vueuse/integrations": "10.0.2",
     "axios": "1.3.5",
@@ -33,11 +34,15 @@
     "dayjs": "1.11.7",
     "lodash-es": "4.17.21",
     "pinia": "2.1.3",
+    "unplugin-fonts": "1.0.3",
+    "vite-plugin-minify": "1.5.2",
+    "vite-plugin-pwa": "0.16.4",
     "vue": "3.3.4",
     "vue-chartjs": "5.2.0",
     "vue-i18n": "9.2.2",
     "vue-meta": "3.0.0-alpha.10",
-    "vue-router": "4.1.6"
+    "vue-router": "4.1.6",
+    "vuetify": "3.3.3"
   },
   "devDependencies": {
     "@types/lodash-es": "4.17.7",
